src/test/resources/invalid_tests/InvalidGroupTest.cnna
architecture InvalidGroupTest{
    def input in
    def output out

    in ->
    group 1..3{
        fullyConnected(units=128)
    }
    group 5{
        fullyConnected(units=128)
    }
    merge concatenate()
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}